<resources>
    <string name="app_name">Wash2GoProject</string>
    <string name="log_out">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Continue_text">Continue</string>
    <!--  <string name="default_web_client_id">" 942246488668-5ol72k6nt0t3ebv3o4upu6uaqr6c9r3v
    .apps.googleusercontent.com"</string> -->
    <!--    <string name="google_maps_key" translatable="false">AIzaSyBcNe5mLxKAaeJSmsFz0F2E7jd-SmO_v5o</string>-->
    <string name="permission_description"> Welcome to Wash2Go car detailing application. In order to use our service, we will first need to request location permission from you.please click the button below if you agree and wish to continue, otherwise, we are sorry we won\'t be able to provide you with our services</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="title_activity_detailer_setup">DetailerSetupActivity</string>
    <string name="title_activity_detailer">DetailerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="service_descp">Service Includes</string>
    <string name="my_jobs">My Jobs</string>
    <string name="request_for_supplies">Request for Supplies</string>
    <string name="feedback">Feedback</string>
    <string name="update_charges">Update Charges</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_customer">CustomerActivity</string>

</resources>